# llvm_modules

magic-cli/: CMakeLists.txt  main.cpp
